<?xml version="1.0"?>
<package format="3">
  <name>gamepad4ros2</name>
  <version>0.1.0</version>
  <description>Read gamepad analogs and publish ros2 commands.</description>
  <maintainer email="wariasb@gmail.com">William Arias</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ament_index_cpp</depend>
  <depend>rclcpp</depend>
  <depend>ar_interfaces</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
